# e-gov-mcp

./: .gitattributes  .gitignore  LICENSE  QUICKSTART.md  README.md  WINDOWS_SETUP.md  WSL_TROUBLESHOOTING.md  check_syntax.py  cli.py  pyproject.toml  run_explain.py  run_server.py  search.py
config/: laws.yaml
docs/: DEVELOPMENT.md  USAGE.md
examples/: basic_article_search.py  basic_search.py  complex_patterns.py  keyword_search.py  law_content.py  resources_demo.py
prompts/: legal_analysis.md
src/: __init__.py  mcp_server.py  prompt_loader.py  tmp_sig.py
tests/: test_coverage.py  test_env_pdf_integration.py  test_env_pdf_refs.py  test_mcp_server_v2.py  test_new_features.py  test_performance_v2.py  test_structural_tools.py
