[project]
name = "e-gov-mcp"
version = "2.1.0"
description = "日本政府のe-Gov法令API用Model Context Protocolサーバー — 23ツールで六法・施行令・施行規則を検索・参照解析"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "yoshihiro1909", email = "matters5wirier@icloud.com"}
]
keywords = ["mcp", "model-context-protocol", "japanese-law", "e-gov", "legal", "fastmcp", "日本法", "法令"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
    "Natural Language :: Japanese"
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.8.1",
    "httpx>=0.24.0",
    "pymupdf>=1.26.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
performance = [
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/yoshihiro1909/e-gov-mcp"
Repository = "https://github.com/yoshihiro1909/e-gov-mcp"
Documentation = "https://github.com/yoshihiro1909/e-gov-mcp#readme"
"Bug Tracker" = "https://github.com/yoshihiro1909/e-gov-mcp/issues"

[project.scripts]
e-gov-mcp = "src.mcp_server:main"

# FastMCP entry point for uvx
[project.entry-points."fastmcp.mcp_server.python"]
e-gov-law = "src.mcp_server:mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "config", "prompts"]

[tool.black]
line-length = 100
target-version = ['py39']
skip-string-normalization = true

[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
]
